#0000 Template: Optimization of code